# rustAction

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: daily-run.yml  run.yml
src/: config.rs  error.rs  main.rs
src/mock_data/: example_transcript.json
src/models/: discord.rs  mod.rs  myAI_response.rs  todo.rs  youtube_snippet.rs  youtube_transcript.rs
src/services/: discord_service.rs  http_client.rs  ksForword_service.rs  mod.rs  myAI_service.rs  supabase_service.rs  todo_service.rs  youtube_service.rs
