[package]
name = "schRust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # สำหรับอ่าน/แปลง JSON mock data
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde_derive = "1.0.228"
chrono = "0.4.42"
