[package]
name = "schRust"
version = "1.0.0"
edition = "2021"
authors = ["KS Forward Team"]
description = "Automated KS Forward video transcript summarizer with Discord integration"
repository = "https://github.com/your-org/schRust"
license = "MIT"

[dependencies]
# HTTP client with features
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Environment variables
dotenvy = "0.15"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Performance optimizations
once_cell = "1.19"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
